Fix: embedded Wistia videos overlap content.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -538,7 +538,7 @@ cite {
 ------------------------------------------------------------*/
 .wistia_embed,
 .wistia-embed {
-  padding: 10px;
+  margin: 1em 0;
 }
 
 /* Media Queries:
